# bevy_lit

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: toon_light.wgsl
examples/: basic.rs  custom_light.rs  mesh_occluders.rs  occluder_mask.rs  penetration.rs  spot_light.rs  stress_test.rs  texture_light.rs
src/: extract.rs  flood.rs  lib.rs  node.rs  occlusion.rs  passes.rs  pipeline.rs  plugin.rs  prepare.rs  queue.rs  sdf.rs  settings.rs  settings_types.wgsl  types.rs  types.wgsl  util.rs  view_transformations.wgsl  visibility.rs
src/light/: light_common.wgsl  light_vertex.wgsl  mod.rs  point_light.rs  point_light.wgsl  render.rs  spot_light.rs  texture_light.rs  texture_light.wgsl
src/light2d/: light2d.rs  light2d.wgsl  light2d_common.wgsl  light2d_vertex.wgsl  light2d_vertex_output.wgsl  light2d_view_bindings.wgsl  mod.rs  node.rs  point_light2d.rs  point_light2d.wgsl  render.rs  shadow2d.wgsl  spot_light2d.rs  spot_light2d.wgsl  texture_light2d.rs  texture_light2d.wgsl
src/light_2d/: mod.rs  node.rs  render.rs
src/lighting2d_settings/: blur.wgsl  composite.wgsl  lighting2d_settings.rs  lighting2d_settings_types.wgsl  mod.rs  node.rs  penetration.wgsl  render.rs
src/lighting_2d/: light_2d.wgsl  mod.rs  node.rs  render.rs
src/occlusion/: mod.rs  render.rs
src/post_process/: blur.wgsl  composite.wgsl  mod.rs  node.rs  penetration.wgsl  render.rs
src/render/: light2d_node.rs  mod.rs  post_process_node.rs  sdf_node.rs  shadow2d_node.rs  voronoi_node.rs
src/shaders/: blur.wgsl  composite.wgsl  flood.wgsl  flood_init.wgsl  jump_flood.wgsl  lighting.wgsl  penetration.wgsl  sdf.wgsl  types.wgsl  view_transformations.wgsl
src/shadows2d/: mod.rs
src/voronoi/: flood.wgsl  flood_seed.wgsl  mod.rs  render.rs
