[package]
name = "bevy_lit"
version = "0.7.0"
edition = "2021"
categories = ["graphics", "game-development", "game-engines", "rendering"]
description = "A lighting 2d library for Bevy"
authors = ["Miguel Albernaz"]
repository = "https://github.com/malbernaz/bevy_lit"
license = "MIT"
readme = "README.md"
exclude = ["static/*"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_winit",
  "png",
  "x11",
  "wayland",
] }
bevy_voronoi = "0.3.1"

[dev-dependencies]
bevy = { version = "0.16", features = ["bevy_dev_tools"] }
rand = { version = "0.9.2" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"

[[example]]
name = "occluder_mask"
path = "examples/occluder_mask.rs"

[[example]]
name = "penetration"
path = "examples/penetration.rs"
